// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button should be clickable 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 0, 175, 0.1)",
      "borderBottomColor": "rgba(255, 0, 175, 0.2)",
      "borderBottomLeftRadius": 4,
      "borderBottomRightRadius": 4,
      "borderBottomWidth": 1,
      "borderLeftColor": "rgba(255, 0, 175, 0.2)",
      "borderLeftWidth": 1,
      "borderRightColor": "rgba(255, 0, 175, 0.2)",
      "borderRightWidth": 1,
      "borderTopColor": "rgba(255, 0, 175, 0.2)",
      "borderTopLeftRadius": 4,
      "borderTopRightRadius": 4,
      "borderTopWidth": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 16,
      "marginLeft": 16,
      "marginRight": 16,
      "marginTop": 32,
      "opacity": 1,
      "paddingBottom": 12,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 12,
    }
  }
  testID="primary_button"
>
  <Text>
    Hello World
  </Text>
</View>
`;

exports[`button should match styling of button type fill-primary 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 0, 175, 0.1)",
      "borderBottomColor": "rgba(255, 0, 175, 0.2)",
      "borderBottomLeftRadius": 4,
      "borderBottomRightRadius": 4,
      "borderBottomWidth": 1,
      "borderLeftColor": "rgba(255, 0, 175, 0.2)",
      "borderLeftWidth": 1,
      "borderRightColor": "rgba(255, 0, 175, 0.2)",
      "borderRightWidth": 1,
      "borderTopColor": "rgba(255, 0, 175, 0.2)",
      "borderTopLeftRadius": 4,
      "borderTopRightRadius": 4,
      "borderTopWidth": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 16,
      "marginLeft": 16,
      "marginRight": 16,
      "marginTop": 32,
      "opacity": 1,
      "paddingBottom": 12,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 12,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "RegularFont",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        Object {
          "color": "rgba(255, 0, 175, 1)",
          "fontFamily": "BoldFont",
          "fontWeight": "700",
        },
      ]
    }
  >
    Submit
  </Text>
</View>
`;

exports[`button should match styling of button type fill-primary 2`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(0, 0, 0, 0.2)",
      "borderBottomColor": "rgba(255, 0, 175, 0.2)",
      "borderBottomLeftRadius": 4,
      "borderBottomRightRadius": 4,
      "borderBottomWidth": 0,
      "borderLeftColor": "rgba(255, 0, 175, 0.2)",
      "borderLeftWidth": 0,
      "borderRightColor": "rgba(255, 0, 175, 0.2)",
      "borderRightWidth": 0,
      "borderTopColor": "rgba(255, 0, 175, 0.2)",
      "borderTopLeftRadius": 4,
      "borderTopRightRadius": 4,
      "borderTopWidth": 0,
      "color": "rgba(255, 255, 255, 0.05)",
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 16,
      "marginLeft": 16,
      "marginRight": 16,
      "marginTop": 32,
      "opacity": 1,
      "paddingBottom": 12,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 12,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "RegularFont",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        Object {
          "color": "rgba(255, 255, 255, 0.2)",
          "fontFamily": "BoldFont",
          "fontWeight": "700",
        },
      ]
    }
  >
    Submit
  </Text>
</View>
`;

exports[`button should match styling of button type fill-secondary 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(91, 16, 255, 0.1)",
      "borderBottomColor": "rgba(91, 16, 255, 0.2)",
      "borderBottomLeftRadius": 4,
      "borderBottomRightRadius": 4,
      "borderBottomWidth": 1,
      "borderLeftColor": "rgba(91, 16, 255, 0.2)",
      "borderLeftWidth": 1,
      "borderRightColor": "rgba(91, 16, 255, 0.2)",
      "borderRightWidth": 1,
      "borderTopColor": "rgba(91, 16, 255, 0.2)",
      "borderTopLeftRadius": 4,
      "borderTopRightRadius": 4,
      "borderTopWidth": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 16,
      "marginLeft": 16,
      "marginRight": 16,
      "marginTop": 32,
      "opacity": 1,
      "paddingBottom": 12,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 12,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "RegularFont",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        Object {
          "color": "rgba(91, 16, 255, 1)",
          "fontFamily": "BoldFont",
          "fontWeight": "700",
        },
      ]
    }
  >
    Submit
  </Text>
</View>
`;

exports[`button should match styling of button type fill-secondary 2`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(0, 0, 0, 0.2)",
      "borderBottomColor": "rgba(91, 16, 255, 0.2)",
      "borderBottomLeftRadius": 4,
      "borderBottomRightRadius": 4,
      "borderBottomWidth": 0,
      "borderLeftColor": "rgba(91, 16, 255, 0.2)",
      "borderLeftWidth": 0,
      "borderRightColor": "rgba(91, 16, 255, 0.2)",
      "borderRightWidth": 0,
      "borderTopColor": "rgba(91, 16, 255, 0.2)",
      "borderTopLeftRadius": 4,
      "borderTopRightRadius": 4,
      "borderTopWidth": 0,
      "color": "rgba(255, 255, 255, 0.05)",
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 16,
      "marginLeft": 16,
      "marginRight": 16,
      "marginTop": 32,
      "opacity": 1,
      "paddingBottom": 12,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 12,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "RegularFont",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        Object {
          "color": "rgba(255, 255, 255, 0.2)",
          "fontFamily": "BoldFont",
          "fontWeight": "700",
        },
      ]
    }
  >
    Submit
  </Text>
</View>
`;

exports[`button should match styling of button type flat-primary 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderBottomLeftRadius": 4,
      "borderBottomRightRadius": 4,
      "borderStyle": "none",
      "borderTopLeftRadius": 4,
      "borderTopRightRadius": 4,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 16,
      "marginLeft": 16,
      "marginRight": 16,
      "marginTop": 32,
      "opacity": 1,
      "paddingBottom": 12,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 12,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "RegularFont",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        Object {
          "color": "rgba(255, 0, 175, 1)",
          "fontFamily": "BoldFont",
          "fontWeight": "700",
        },
      ]
    }
  >
    Submit
  </Text>
</View>
`;

exports[`button should match styling of button type flat-primary 2`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(0, 0, 0, 0.2)",
      "borderBottomLeftRadius": 4,
      "borderBottomRightRadius": 4,
      "borderBottomWidth": 0,
      "borderLeftWidth": 0,
      "borderRightWidth": 0,
      "borderStyle": "none",
      "borderTopLeftRadius": 4,
      "borderTopRightRadius": 4,
      "borderTopWidth": 0,
      "color": "rgba(255, 255, 255, 0.05)",
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 16,
      "marginLeft": 16,
      "marginRight": 16,
      "marginTop": 32,
      "opacity": 1,
      "paddingBottom": 12,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 12,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "RegularFont",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        Object {
          "color": "rgba(255, 255, 255, 0.2)",
          "fontFamily": "BoldFont",
          "fontWeight": "700",
        },
      ]
    }
  >
    Submit
  </Text>
</View>
`;

exports[`button should match styling of button type flat-secondary 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderBottomLeftRadius": 4,
      "borderBottomRightRadius": 4,
      "borderStyle": "none",
      "borderTopLeftRadius": 4,
      "borderTopRightRadius": 4,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 16,
      "marginLeft": 16,
      "marginRight": 16,
      "marginTop": 32,
      "opacity": 1,
      "paddingBottom": 12,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 12,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "RegularFont",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        Object {
          "color": "rgba(91, 16, 255, 1)",
          "fontFamily": "BoldFont",
          "fontWeight": "700",
        },
      ]
    }
  >
    Submit
  </Text>
</View>
`;

exports[`button should match styling of button type flat-secondary 2`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(0, 0, 0, 0.2)",
      "borderBottomLeftRadius": 4,
      "borderBottomRightRadius": 4,
      "borderBottomWidth": 0,
      "borderLeftWidth": 0,
      "borderRightWidth": 0,
      "borderStyle": "none",
      "borderTopLeftRadius": 4,
      "borderTopRightRadius": 4,
      "borderTopWidth": 0,
      "color": "rgba(255, 255, 255, 0.05)",
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 16,
      "marginLeft": 16,
      "marginRight": 16,
      "marginTop": 32,
      "opacity": 1,
      "paddingBottom": 12,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 12,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "RegularFont",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        Object {
          "color": "rgba(255, 255, 255, 0.2)",
          "fontFamily": "BoldFont",
          "fontWeight": "700",
        },
      ]
    }
  >
    Submit
  </Text>
</View>
`;

exports[`button should match styling of button type outline-primary 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderBottomColor": "rgba(255, 0, 175, 0.2)",
      "borderBottomLeftRadius": 4,
      "borderBottomRightRadius": 4,
      "borderBottomWidth": 1,
      "borderLeftColor": "rgba(255, 0, 175, 0.2)",
      "borderLeftWidth": 1,
      "borderRightColor": "rgba(255, 0, 175, 0.2)",
      "borderRightWidth": 1,
      "borderTopColor": "rgba(255, 0, 175, 0.2)",
      "borderTopLeftRadius": 4,
      "borderTopRightRadius": 4,
      "borderTopWidth": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 16,
      "marginLeft": 16,
      "marginRight": 16,
      "marginTop": 32,
      "opacity": 1,
      "paddingBottom": 12,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 12,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "RegularFont",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        Object {
          "color": "rgba(255, 0, 175, 1)",
          "fontFamily": "BoldFont",
          "fontWeight": "700",
        },
      ]
    }
  >
    Submit
  </Text>
</View>
`;

exports[`button should match styling of button type outline-primary 2`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(0, 0, 0, 0.2)",
      "borderBottomColor": "rgba(255, 0, 175, 0.2)",
      "borderBottomLeftRadius": 4,
      "borderBottomRightRadius": 4,
      "borderBottomWidth": 0,
      "borderLeftColor": "rgba(255, 0, 175, 0.2)",
      "borderLeftWidth": 0,
      "borderRightColor": "rgba(255, 0, 175, 0.2)",
      "borderRightWidth": 0,
      "borderTopColor": "rgba(255, 0, 175, 0.2)",
      "borderTopLeftRadius": 4,
      "borderTopRightRadius": 4,
      "borderTopWidth": 0,
      "color": "rgba(255, 255, 255, 0.05)",
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 16,
      "marginLeft": 16,
      "marginRight": 16,
      "marginTop": 32,
      "opacity": 1,
      "paddingBottom": 12,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 12,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "RegularFont",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        Object {
          "color": "rgba(255, 255, 255, 0.2)",
          "fontFamily": "BoldFont",
          "fontWeight": "700",
        },
      ]
    }
  >
    Submit
  </Text>
</View>
`;

exports[`button should match styling of button type outline-secondary 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderBottomColor": "rgba(91, 16, 255, 0.2)",
      "borderBottomLeftRadius": 4,
      "borderBottomRightRadius": 4,
      "borderBottomWidth": 1,
      "borderLeftColor": "rgba(91, 16, 255, 0.2)",
      "borderLeftWidth": 1,
      "borderRightColor": "rgba(91, 16, 255, 0.2)",
      "borderRightWidth": 1,
      "borderTopColor": "rgba(91, 16, 255, 0.2)",
      "borderTopLeftRadius": 4,
      "borderTopRightRadius": 4,
      "borderTopWidth": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 16,
      "marginLeft": 16,
      "marginRight": 16,
      "marginTop": 32,
      "opacity": 1,
      "paddingBottom": 12,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 12,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "RegularFont",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        Object {
          "color": "rgba(91, 16, 255, 1)",
          "fontFamily": "BoldFont",
          "fontWeight": "700",
        },
      ]
    }
  >
    Submit
  </Text>
</View>
`;

exports[`button should match styling of button type outline-secondary 2`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(0, 0, 0, 0.2)",
      "borderBottomColor": "rgba(91, 16, 255, 0.2)",
      "borderBottomLeftRadius": 4,
      "borderBottomRightRadius": 4,
      "borderBottomWidth": 0,
      "borderLeftColor": "rgba(91, 16, 255, 0.2)",
      "borderLeftWidth": 0,
      "borderRightColor": "rgba(91, 16, 255, 0.2)",
      "borderRightWidth": 0,
      "borderTopColor": "rgba(91, 16, 255, 0.2)",
      "borderTopLeftRadius": 4,
      "borderTopRightRadius": 4,
      "borderTopWidth": 0,
      "color": "rgba(255, 255, 255, 0.05)",
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 16,
      "marginLeft": 16,
      "marginRight": 16,
      "marginTop": 32,
      "opacity": 1,
      "paddingBottom": 12,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 12,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "RegularFont",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        Object {
          "color": "rgba(255, 255, 255, 0.2)",
          "fontFamily": "BoldFont",
          "fontWeight": "700",
        },
      ]
    }
  >
    Submit
  </Text>
</View>
`;

exports[`button should not be clickable when disabled 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(0, 0, 0, 0.2)",
      "borderBottomColor": "rgba(255, 0, 175, 0.2)",
      "borderBottomLeftRadius": 4,
      "borderBottomRightRadius": 4,
      "borderBottomWidth": 0,
      "borderLeftColor": "rgba(255, 0, 175, 0.2)",
      "borderLeftWidth": 0,
      "borderRightColor": "rgba(255, 0, 175, 0.2)",
      "borderRightWidth": 0,
      "borderTopColor": "rgba(255, 0, 175, 0.2)",
      "borderTopLeftRadius": 4,
      "borderTopRightRadius": 4,
      "borderTopWidth": 0,
      "color": "rgba(255, 255, 255, 0.05)",
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 16,
      "marginLeft": 16,
      "marginRight": 16,
      "marginTop": 32,
      "opacity": 1,
      "paddingBottom": 12,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 12,
    }
  }
  testID="primary_button"
>
  <Text>
    Hello World
  </Text>
</View>
`;
